--- a/plugins/03-controls/src/styles/screen.css
+++ b/plugins/03-controls/src/styles/screen.css
@@ -3,3 +3,15 @@
     border: 4px solid #eee;
     padding: 20px;
 }
+
+.wp-block-gutenberg201908-controls .controls__content--left {
+    text-align: left;
+}
+
+.wp-block-gutenberg201908-controls .controls__content--center {
+    text-align: center;
+}
+
+.wp-block-gutenberg201908-controls .controls__content--right {
+    text-align: right;
+}
