--- a/app-blocks/src/styles/editor.scss
+++ b/app-blocks/src/styles/editor.scss
@@ -1,3 +1,4 @@
 @import "../blocks/controls/styles/editor";
 @import "../blocks/editable/styles/editor";
 @import "../blocks/hello/styles/editor";
+@import "../blocks/recipe/styles/editor";
