--- a/app-blocks/src/styles/screen.scss
+++ b/app-blocks/src/styles/screen.scss
@@ -1,3 +1,4 @@
 @import "../blocks/controls/styles/screen";
 @import "../blocks/editable/styles/screen";
 @import "../blocks/hello/styles/screen";
+@import "../blocks/recipe/styles/screen";
