--- a/app-blocks/src/blocks/controls/styles/screen.scss
+++ b/app-blocks/src/blocks/controls/styles/screen.scss
@@ -5,15 +5,15 @@
     padding: 20px;
   }
 
-  &.alignment-left {
+  &--left {
     text-align: left;
   }
 
-  &.alignment-right {
+  &--right {
     text-align: right;
   }
 
-  &.alignment-center {
+  &--center {
     text-align: center;
   }
 
